	flags to configure.ac; remove adding of -march option; forcefully disable
	symbol visibility for ICC due to linker trouble; disable NASM and SIMD
	specific stuff if no MMX is found, as we don't use other SIMD instructions;
	enable dlopening vorbis
	
	* src/extensions/al_ext_vorbis.c: enable dlopening (ripped from arts backend;
	testvorbis seems to indicate working code...)

2006-01-09  Sven Panne  <sven.panne@aedion.de>

	* include/AL/alext.h, src/al_buffer.c, src/extensions/al_ext_loki.h,
	src/extensions/al_ext_mp3.h: Make some LOKI extensions visible again.

	* configure.ac: Fixed symbol visibility support detection. Note that GCC
	3.3.x and GCC 3.4.x support '__attribute__((visibility(...)))', but not
	'-fvisibility=...'. Furthermore, don't bother testing for that if we are
	not even using GCC. Put the HAVE_GCC_VISIBILITY #define into config.h,
	we always have to #include that before the AL headers in our code,
	anyway.

2006-01-07  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: Cache back-ends detection results; use macro for debug
	options checking. Remove word "back-end" from output.
	
	* configure.ac: Added gcc symbol visibility support detection.

2006-01-06  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: Sync CFLAGS to configure.ac, but keeping -O2, as *no*
	optimization level makes no sense...
	
	* README: update CMake featurelist

2006-01-05  Sven Panne  <sven.panne@aedion.de>

	* src/alc/alc_context.c, src/alc/alc_device.c,
	src/backends/alc_backend.c, src/backends/alc_backend.h,
	src/backends/alc_backend_alsa.c, src/backends/alc_backend_arts.c,
	src/backends/alc_backend_bsd.c, src/backends/alc_backend_darwin.c,
	src/backends/alc_backend_esd.c, src/backends/alc_backend_irix.c,
	src/backends/alc_backend_linux.c, src/backends/alc_backend_morphos.c,
	src/backends/alc_backend_null.c, src/backends/alc_backend_sdl.c,
	src/backends/alc_backend_solaris.c, src/backends/alc_backend_wave.c,